@@ -1,3 +1,8 @@
+2008-06-12  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/36462
+	* gfortran.dg/index_2.f90: New.
+
 2008-06-12  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gnat.dg/discr9.ad[sb]: New test.
